Introducing the DateTime field.

--- a/bower.json
+++ b/bower.json
@@ -2,6 +2,7 @@
   "name": "giant-meta",
   "private": true,
   "devDependencies": {
-    "selectize": "^0.12.1"
+    "selectize": "^0.12.1",
+    "datetimepicker": "^2.5.4"
   }
 }
